syntax = "proto3";

package types;

enum TouchMode {
  Adb = 0;
  MiniTouch = 1;
  MaaTouch = 2;
  MacPlayTools = 3;
}

enum TaskType {
  StartUp = 0;
  CloseDown = 1;
  Fight = 2;
  Recruit = 3;
  Infrast = 4;
  Mall = 5;
  Award = 6;
  Roguelike = 7;
  Copilot = 8;
  SSSCopilot = 9;
  Depot = 10;
  OperBox = 11;
  Reclamation = 12;
  Custom = 13;
  SingleStep = 14;
  VideoRecognition = 15;
}

enum TaskStateType {
  /* Global Info */
  InternalError = 0;
  InitFailed = 1;
  ConnectionInfo = 2;
  AllTasksCompleted = 3;
  AsyncCallInfo = 4;
  Destroyed = 5;

  /* TaskChain Info */
  TaskChainError = 10000;
  TaskChainStart = 10001;
  TaskChainCompleted = 10002;
  TaskChainExtraInfo = 10003;
  TaskChainStopped = 10004;

  /* SubTask Info */
  SubTaskError = 20000;
  SubTaskStart = 20001;
  SubTaskCompleted = 20002;
  SubTaskExtraInfo = 20003;
  SubTaskStopped = 20004;
  
  /* Unknown */
  Unknown = -1;
}